[package]
name = "minidump-rs"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minidump = "0.12.0"
minidump-common = "0.12.0"
minidump-processor = { version = "0.12.0", features = [ "http" ] }
tokio = { version = "1.12.0", features = ["full"] }
once_cell = "1"


[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6", "promise-api", "channel-api"]
